--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
         <div class="form-section">
             <h2>支出を登録</h2>
-            <form action="/kakeibo/add" method="post" id="expense-form">
+            <form action="{{ url_for('add_expense') }}" method="post" id="expense-form">
                 <div class="form-group">
                     <label>日付:</label>
                     <div class="date-selects">
